<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="calculate">CALCULATE</string>
    <string name="enter_weight_in_kgs">Enter weight in kgs</string>
    <string name="enter_height_in_meters">Enter height in meters</string>
    <string name="bmi_body_mass_index">BMI - Body Mass Index</string>
    <string name="category">Category</string>
</resources>