<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgback001"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_margin="25dp"
        android:fontFamily="sans-serif"
        android:paddingLeft="23dp"
        android:paddingTop="13dp"
        android:paddingRight="23dp"
        android:paddingBottom="13dp"
        android:text="@string/bmi_calculator"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <Button

        android:id="@+id/buttonTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:onClick="calculateBMI"
        android:text="@string/calculate"
        app:backgroundTint="#9BA1CA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/heading"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:autofillHints="0"
        android:ems="10"
        android:hint="@string/enter_weight_in_kgs"
        android:inputType="numberDecimal"
        android:textColor="#421919"
        android:textColorHint="#605B5B"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwo"
        app:layout_constraintEnd_toEndOf="@+id/heading"
        app:layout_constraintStart_toStartOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:layout_constraintVertical_bias="0.206" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="0"
        android:ems="10"
        android:hint="@string/enter_height_in_meters"
        android:inputType="numberDecimal"
        android:textColor="#A64E4E"
        android:textColorHint="#605B5B"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwo"
        app:layout_constraintEnd_toEndOf="@+id/editText1"
        app:layout_constraintStart_toStartOf="@+id/editText1"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintVertical_bias="0.389" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="13dp"
        android:paddingTop="7dp"
        android:paddingRight="13dp"
        android:paddingBottom="7dp"
        android:text="@string/bmi_body_mass_index"
        android:textColor="#535151"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonTwo"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="13dp"
        android:paddingTop="7dp"
        android:paddingRight="13dp"
        android:paddingBottom="7dp"
        android:text="@string/category"
        android:textColor="#535151"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonTwo"
        app:layout_constraintStart_toStartOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwo" />


</androidx.constraintlayout.widget.ConstraintLayout>